# api/models/course.go
@@ -50,8 +50,9 @@ type CoursePrimaryKey struct {
 }
 
 type CourseGetListRequest struct {
-	Offset int `json:"offset"`
-	Limit  int `json:"limit"`
+	Offset int    `json:"offset"`
+	Limit  int    `json:"limit"`
+	Search string `json:"search"`
 }
 
 type CourseOfUsers struct {
